--- a/class05/Class05.qmd
+++ b/class05/Class05.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Class 05: Data Visualization with GGPLOT"
 author: "Mehek (A16868697)"
-format: pdf
+format: gfm
 ---
 
 ## Plotting in R
