--- a/class06/HWClass6.Rmd
+++ b/class06/HWClass6.Rmd
@@ -2,7 +2,7 @@
 title: "HW Class 6"
 author: "Mehek Sumar"
 date: "2024-10-21"
-output: pdf_document
+output: gfm
 ---
 
 ```{r setup, include=FALSE}
